# FateAnotherRL

./: .dockerignore  .gitattributes  .gitignore  README.md  assemble.py  monitor_trainer.sh  run_docker.sh  run_linux.sh  run_windows.bat
EasyHook/: EasyHook32.def  EasyHookTestCert.cer  aux_ulib_stub.c  do_build.ps1  stubs.c
EasyHook/EasyHookDll/: EasyHookDll.vcxproj  EasyHookDll_32.rc  EasyHookDll_64.rc  dllmain.c  stdafx.h
JNLoader/: JNLoader.sln
JNLoader/JNLoader/: JNLoader.csproj  Launcher.cs  Program.cs  app.config
JassNative/Cirnix.JassNative.Runtime/: Cirnix.JassNative.Runtime.csproj  EntryPoint.cs  PluginSystem.cs  ProxyBootstrap.cs
JassNative/Cirnix.JassNative.YDWE/: Wrapper.cs
MapPatch/: fateanother_original.w3x  fateanother_rl.w3x  fateanother_verFS26A_original.w3x  rl_patch.py
configs/: reward_aggressive.yaml  reward_default.yaml
docker/: Dockerfile.gpu  Dockerfile.gpu.base  Dockerfile.wc3  docker-compose.v4.yml  entrypoint.inference.sh  entrypoint.sh  entrypoint.trainer.sh
fateanother_rl/: __init__.py  requirements.txt
fateanother_rl/config/: default.yaml  docker.yaml  v3.yaml
fateanother_rl/data/: __init__.py  constants.py  hero_data.py  item_data.py
fateanother_rl/env/: __init__.py  env_manager.py  state_parser.py  tcp_client.py  wc3_env.py
inference_server/: CMakeLists.txt  build_linux.sh  build_win.bat
inference_server/include/: constants.h  inference_engine.h  protocol.h  reward_calc.h  rollout_writer.h  state_encoder.h  udp_server.h
inference_server/src/: inference_engine.cpp  main.cpp  reward_calc.cpp  rollout_writer.cpp  state_encoder.cpp  udp_server.cpp
rl_comm/: RLCommPlugin.cs  RLCommPlugin.csproj  build.bat
(+22 files in other folders)
